<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_treding"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_category"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_bookmark"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_premium"
        android:icon="@drawable/ic_premium"
        android:title="@string/title_Premium"
        android:visible="false"
        app:showAsAction="withText" />

    <item
        android:id="@+id/bottom_latest"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="withText" />
</menu>
