<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="120dp"
                android:layout_height="120dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="100dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="E Books"
                android:textColor="@color/colorAccent"
                android:textSize="30dp"
                android:visibility="gone" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.45"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0">


                <EditText
                    android:id="@+id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/full_name"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/email"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1.0">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="1.0">

                <TextView
                    android:id="@+id/txt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_bor_bg"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/signup_cap"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/already_account"
                        android:textColor="@color/font_dark"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txt_registration"
                        android:layout_width="55dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:letterSpacing="0.05"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14dp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>